# lake

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md
.github/workflows/: build.yml  p3.yml
deploy/: README.md  docker-compose.yml  run-local.sh  smoke.sh
docs/: 00-plan.md  02-architecture.md  04-compute-layer.md  06-scheduling.md
docs/architecture/: compute-layer.md  consistency.md  control-plane.md  data-flow.md  execution-modes.md  kv-cache-pool.md  overview.md  scheduling.md  storage-layer.md  topology.md
docs/features/: features.md  goals.md  nonfunctional.md  slo.md
docs/research/: 3rdparty-reference.md  dualpath.md  guided-decoding.md  pd-disaggregation.md  references.md  sampling-params.md  scheduler-worker-interface.md
docs/research/dynamo/: overview.md
docs/research/lmcache/: overview.md  sharing-and-backends.md
docs/research/memcache/: architecture.md  overview.md  pain-points.md
docs/research/mooncake/: kv-store.md  overview.md  transfer-engine.md
docs/research/sglang/: agentic-kv-roadmap.md  block-lifecycle.md  hicache.md  model-runner.md  overview.md  pain-points.md  storage-backends.md  thinking-control.md
docs/research/tilert/: overview.md  pain-points.md  pd-vllm.md
docs/research/ucm/: architecture.md  overview.md  pain-points.md
docs/research/vllm/: block-lifecycle.md  compute.md  kv-session-roadmap.md  overview.md  pain-points.md
go/: go.mod
go/pb/: lake.pb.go  lake_grpc.pb.go  schema.pb.go
go/router/: router.go  server.go
go/router/cmd/router/: main.go
proto/: lake.proto  schema.proto
python/: pyproject.toml  setup.py
python/decode/: __init__.py
python/draft/: __init__.py
python/engine/: __init__.py  agent.py  input_batch.py  model_runner.py  pool_iface.py  pool_types.py
python/engine/agents/: __init__.py  grpc_skeleton.py  memory.py
python/engine/attn/: __init__.py  backend.py
python/engine/drafter/: __init__.py  tiny_mtp.py
python/engine/models/: __init__.py  tiny_lm.py
python/engine/sample/: __init__.py  greedy.py  reject.py
python/engine/tests/: test_drafter.py  test_pool_agent.py  test_tiny_lm.py
python/kernels/: __init__.py  attn_ref.py  attn_triton.py
python/lake_pb/: __init__.py  lake_pb2.py  lake_pb2_grpc.py  schema_pb2.py  schema_pb2_grpc.py
python/prefill/: __init__.py
python/runtime/: __init__.py  __main__.py  exec_mode.py  future_map.py  mode_select.py  node_scheduler.py  prefix_hint.py  req.py  role.py  scheduler_output.py  worker.py
python/runtime/tests/: test_node_scheduler_mock.py  test_prebuilt.py
rust/: .gitignore  Cargo.toml  rust-toolchain.toml
rust/controlplane/: Cargo.toml
rust/controlplane/src/: authority.rs  hash_chain.rs  lib.rs  main.rs  tier.rs
rust/kv-pool/: Cargo.toml
rust/kv-pool/src/: lib.rs  main.rs
rust/proto/: Cargo.toml  build.rs
rust/proto/src/: lib.rs
rust/storage-agent/: Cargo.toml
rust/storage-agent/src/: lib.rs  main.rs
rust/tiered-store/: Cargo.toml
rust/tiered-store/src/: lib.rs
rust/transfer/: Cargo.toml
rust/transfer/src/: lib.rs
rust/weight-cache/: Cargo.toml
rust/weight-cache/src/: lib.rs
scripts/: gen_stubs.sh  verify-p3.sh
src/: __init__.py  __main__.py  compute.py  kv_pool.py  scheduler.py  storage.py
