[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lake"
version = "0.0.0"
# 版本下限对齐生成 stub:lake_pb2.py 校验 protobuf runtime ≥ 7.35.0(major 7),
# lake_pb2_grpc.py 校验 grpcio ≥ 1.82.1。低于此 import 即炸,故钉到生成版本。
dependencies = [
    "grpcio>=1.82.1",
    "protobuf>=7.35.0",
]

# 已定技术选型 Python+Triton；C3 TinyLM 不强制。安装：pip install -e ".[cuda]"
[project.optional-dependencies]
cuda = ["torch", "triton"]

[tool.setuptools.packages.find]
# 白名单(非 find_packages 自动发现):新增 python/ 顶层包必须改这里,否则
# `pip install -e .` 会静默不打包。CI 现走 PYTHONPATH,import 不受影响,属隐患。
# 当前包:prefill/decode/draft/kernels/runtime/lake_pb。
# P5 计算层若引入 engine/(或其它顶层包)务必同步 include;最终倾向归并为单包 lake。
include = ["prefill*", "decode*", "draft*", "kernels*", "runtime*", "lake_pb*", "engine*"]
