[workspace]
resolver = "2"
members = [
    "proto",
    "controlplane",
    "kv-pool",
    "weight-cache",
    "tiered-store",
    "transfer",
    "storage-agent",
]

# 存储层 Rust 工作区（P2 空壳）。
# - proto: tonic-build 从 proto/ 在线生成 gRPC stub（不入仓），作为共享 lib
# - controlplane: 位置视图权威进程空壳（权威在 Rust，见 control-plane.md）
# - kv-pool / weight-cache / tiered-store / transfer / storage-agent: 空壳 crate，仅能编译，无业务逻辑
