[workspace]
resolver = "2"
members = [
    "proto",
    "controlplane",
    "kv-pool",
    "weight-cache",
    "tiered-store",
    "transfer",
    "storage-agent",
]

# 存储层 Rust 工作区。
# P2:空壳编译;P3:controlplane / kv-pool 提供可执行 gRPC 服务(内存权威 + SkeletonKv)。

[workspace.dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tonic-build = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-stream = "0.1"
lake-proto = { path = "proto" }
