[package]
name = "lake-controlplane"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "lake-controlplane"
path = "src/main.rs"

[dependencies]
lake-proto.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true }
prost.workspace = true

# P3:ControlPlaneService 内存权威(RegisterBlocks / LookupPrefix / Locate / RequestBarrier)。
# SubscribeView / Lease 返回未实现;P4+ 补。
