[package]
name = "lake-controlplane"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "lake-controlplane"
path = "src/main.rs"

[dependencies]
lake-proto.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true }
prost.workspace = true
kvbm-logical = { path = "../vendor/kvbm-logical" }
dynamo-tokens = { path = "../vendor/dynamo-tokens" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# P4.2:ControlPlaneService — BlockRegistry radix + ReportRef + InactiveIndex 驱逐薄驱动。
