[package]
name = "lake-kv-pool"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "lake-kv-pool"
path = "src/main.rs"

[dependencies]
lake-proto.workspace = true
tonic.workspace = true
tokio.workspace = true
prost.workspace = true

# P3:SkeletonKvService 内存字节池(生产 RDMA 旁路前的 mock 数据面)。
