[package]
name = "lake-storage-agent"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "lake-storage-agent"
path = "src/main.rs"

[dependencies]
lake-proto.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true }
prost.workspace = true

# P3:AgentService.Dispatch 占位(边10);PlaceBlocks ack;ReportLoad 空流。
# 生产再叠 FFI / TransferService / feature 分角色。
