[package]
name = "lake-storage-agent"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
lake-proto.workspace = true
tonic.workspace = true

# 双角色用 feature 区分(非两个 crate,见 PR #17 review #6):
#   compute — 计算节点侧 agent(组装 block table / 发起传输 / 持本地视图镜像)
#   kvnode  — KV Node 侧 agent(serve 远端 DRAM/NVMe 段)
# 默认全开(空壳期);实现期按部署只开其一,共用传输 core。
[features]
default = ["compute", "kvnode"]
compute = []
kvnode  = []

# 空壳:存储池 agent(计算节点 / KV Node 双角色共用传输 core)。P2 仅验证编译。
